--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -58,8 +58,8 @@
       padding-left: 0px;
       li {
       display: flex;
-      justify-content: space-between;
-      padding-left: 0px;
+      justify-content: space-around;
+      line-height: 2.6rem;
       }
     }
   }
