--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <div id="recipe-show" class="container" >
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
 
       <h1 class="header"><%= @recipe.name %></h1>
 
@@ -16,7 +16,14 @@
               <span class="icon__container"><%= svg 'chopsticks' %><p><%= @recipe.servings %> pers.</p></span>
               <span class="icon__container"><%= svg 'chef-hat' %><p><%= @recipe.difficulty %></p></span>
               <span class="icon__container"><%= svg 'whisk' %><p><%= @recipe.preparation_time %> min</p></span>
-              <span class="icon__container"><%= svg 'cooking' %><p><%= @recipe.cooking_time %> min</p></span>
+              <span class="icon__container">
+                <%= svg 'cooking' %>
+                <% if @recipe.cooking_time > 0 %>
+                  <p><%= @recipe.cooking_time %> min</p>
+                <% else %>
+                <p>-</p>
+                <% end %>
+              </span>
             </div>
           </div>
 
@@ -42,8 +49,12 @@
             <ul>
               <% @measures.each do |measure| %>
               <li>
-                <p><%= measure.quantity %><%= measure.text_1 %></p>
-                <p><strong><%= measure.ingredient.name %></strong><%= measure.text_2 %></p>
+                <p class="measure__quantity"><%= measure.quantity %></p>
+                <p>
+                  <%= measure.text_1 %>
+                  <%= measure.ingredient.name %>
+                  <%= measure.text_2 %>
+                </p>
               </li>
               <% end %>
             </ul>
