--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -87,6 +87,7 @@
         text-align: center;
         font-size: 8rem;
         font-weight: 700;
+        line-height: 7rem;
       }
       &--left {
         justify-content: flex-start;
@@ -163,6 +164,7 @@
           text-align: center;
           font-size: 7rem;
           font-weight: 700;
+          line-height: 6rem;
         }
         &--left {
           p {
