--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -62,7 +62,7 @@
         </div>
 
         <div class="col-sm-8 col-xs-12 recipe-etapes">
-          <h3>étapes</h3>
+          <h3>Préparation</h3>
 
           <% @steps.each_with_index do |step, index| %>
             <% if index.even? %>
