--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="Découvrez les meilleurs recettes de cuisines japonnaises"/>
     <meta property="og:url" content="http://www.oishi.io"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="La cuisine japonaise, simplement."/>
+    <meta property="og:title" content="Cuisine. Japonaise. Simple."/>
     <meta property="og:description" content="Découvrez vite nos recettes inédites et faciles!"/>
     <meta property="og:image:secure_url" content="https://res.cloudinary.com/dgv0y9kj7/image/upload/v1539552948/nqsdhbgsbh1u6joco0cq.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
@@ -19,6 +19,7 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
+
   <body>
     <%# render 'shared/flashes' %>
     <% if current_user.present? && current_user.admin? %>
