--- a/app/assets/stylesheets/recipes/_recipe_index.scss
+++ b/app/assets/stylesheets/recipes/_recipe_index.scss
@@ -1,14 +1,14 @@
 #recipe-index {
-  width: 100%;
-
   .header {
-    margin-top: 4rem;
-    font-size: 3.8rem;
-    text-align: center;
+    margin-top: 3rem;
+    font-size: 4.8rem;
+    text-transform: uppercase;
+    font-weight: 600;
   }
 
-  .letters {
-    margin-top: 7rem;
+  .line {
+    border-bottom: 3px solid $color-black;
+    margin: 1rem 0 10rem 0;
   }
 
   .letter {
@@ -35,7 +35,7 @@
         font-size: 10rem;
         text-align: center;
         line-height: 8.5rem;
-        font-weight: 700;
+        font-weight: 600;
       }
     }
 
@@ -62,11 +62,15 @@
   }
 
   @media screen and (max-width: $screen-s) {
-    .header { font-size: 2.8rem; }
+    .header { font-size: 3.4rem; }
+
+    .line { margin: 0.5rem 0 5rem 0; }
+
     .letter {
       .letter__box { h1 { font-size: 8rem; line-height: 6.5rem; } }
       .recipes__list { .recipe { a { font-size: 2rem; } } }
     }
+
     .short-line { &:not(:last-child) { margin: 2rem auto; } }
   }
 }
