--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -1,13 +1,16 @@
 #recipe-show{
+  color: black;
+  
   .header {
     margin-top: 3rem;
-    font-size: 3.8rem;
+    font-size: 4.8rem;
     text-transform: uppercase;
+    font-weight: 600;
   }
 
   .line {
-    border-bottom: 1px solid black;
-    margin: 1.5rem 0 6rem 0;
+    border-bottom: 3px solid $color-black;
+    margin: 1rem 0 6rem 0;
   }
 
   .servingsandtime {
@@ -61,7 +64,7 @@
       line-height: 2.6rem;
       margin-bottom: 1rem;
         .measure__quantity {
-          font-weight: 700;
+          font-weight: 600;
           margin-right: 1rem;
           width: 4rem;
           text-align: right;
@@ -75,6 +78,7 @@
     margin-bottom: 2rem;
     font-size: 2.4rem;
     text-transform: uppercase;
+    font-weight: 600;
   }
 
   .recipe-etapes {
@@ -83,22 +87,22 @@
 
     .step__container {
       display: flex;
-      h5 {
+      h1 {
         text-align: center;
         font-size: 8rem;
-        font-weight: 700;
+        font-weight: 600;
         line-height: 7rem;
       }
       &--left {
         justify-content: flex-start;
-        h5 { margin-right: 1rem; flex: 0 0 10%; }
+        h1 { text-align: left; margin-right: 1rem; flex: 0 0 10%; }
         p {
           flex: 0 0 76%;
         }
       }
       &--right {
         justify-content: flex-end;
-        h5 { text-align: right; margin-left: 1rem; flex: 0 0 10%; }
+        h1 { text-align: right; margin-left: 1rem; flex: 0 0 10%; }
         p {
           flex: 0 0 76%;
         }
@@ -120,6 +124,10 @@
   }
 
   @media screen and (max-width: $screen-s) {
+    .header {
+      font-size: 3.4rem;
+    }
+
     .line {
       margin: 0.5rem 0 2rem 0;
     }
@@ -160,10 +168,10 @@
       margin-top: 2rem;
 
       .step__container {
-        h5 {
+        h1 {
           text-align: center;
           font-size: 7rem;
-          font-weight: 700;
+          font-weight: 600;
           line-height: 6rem;
         }
         &--left {
