--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -19,7 +19,7 @@
       <a v-on:click="editRecipe">
         <Icon type="md-checkmark" size="20" style="margin-right: 10px;" />
       </a>
-      <input class="form-control" style="font-size: 38px; font-family: 'Raleway', 'Helvetica', 'sans-serif'; font-weight: 700;" type="text" v-model="recipe.name"><h2 class="text-center"></h2>
+      <input class="form-control" style="font-size: 38px; font-family: 'Helvetica', 'sans-serif'; font-weight: 700;" type="text" v-model="recipe.name"><h2 class="text-center"></h2>
     </div>
     <div id="recipe-basics" style="display: flex; justify-content: space-between; align-items: center; width: 620px; height: 50px;">
       <div class="item-center-flex-start">
