--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,40 +1,45 @@
 <div id="recipe-index" class="container">
-  <h1 class="header">INDEX DES RECETTES</h1>
-    <div class="row">
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-        <ul class="letters">
-          <% @recipe_index.each_with_index do |(letter, recipes), index| %>
-            <% if index.even? %>
-              <div class="letter letter--left">
-                <div class="letter__box">
-                  <h1><%= letter.upcase %></h1>
-                </div>
-                <ul class="recipes__list">
-                  <% recipes.each do |recipe| %>
-                  <li class="recipe">
-                    <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
-                  </li>
-                  <% end %>
-                </ul>
-              </div>
-              <div class="short-line"></div>
-            <% else %>
-              <div class="letter letter--right">
-                <ul class="recipes__list">
-                  <% recipes.each do |recipe| %>
-                  <li class="recipe">
-                    <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
-                  </li>
-                  <% end %>
-                </ul>
-                <div class="letter__box">
-                  <h1><%= letter.upcase %></h1>
-                </div>
-              </div>
-              <div class="short-line"></div>
-            <% end %>
-          <% end %>
-        </ul>
+  <div class="row">
+    <div class="col-xs-12 col-md-8 col-md-offset-2">
+      <h1 class="header">Index des recettes</h1>
+      <div class="line"></div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+            <ul class="letters">
+              <% @recipe_index.each_with_index do |(letter, recipes), index| %>
+                <% if index.even? %>
+                  <div class="letter letter--left">
+                    <div class="letter__box">
+                      <h1><%= letter.upcase %></h1>
+                    </div>
+                    <ul class="recipes__list">
+                      <% recipes.each do |recipe| %>
+                      <li class="recipe">
+                        <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
+                      </li>
+                      <% end %>
+                    </ul>
+                  </div>
+                  <div class="short-line"></div>
+                <% else %>
+                  <div class="letter letter--right">
+                    <ul class="recipes__list">
+                      <% recipes.each do |recipe| %>
+                      <li class="recipe">
+                        <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
+                      </li>
+                      <% end %>
+                    </ul>
+                    <div class="letter__box">
+                      <h1><%= letter.upcase %></h1>
+                    </div>
+                  </div>
+                  <div class="short-line"></div>
+                <% end %>
+              <% end %>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
