scss file cleanup and topbar design

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 
   <body>
     <%# render 'shared/flashes' %>
+    <%= render 'shared/topbar' %>
     <% if current_user.present? && current_user.admin? %>
       <%= render 'shared/menu' %>
     <% end %>
