--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,8 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
 @import "form";
-@import "banner";
-@import "cards";
 @import "button";
 @import "menu";
 @import "spinner";
+@import "topbar";
