--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -15,6 +15,39 @@
     }
   }
 
+  .search {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    width: 32rem;
+    height: 4.5rem;
+    margin-left: 5%;
+    a {
+      cursor: pointer;
+      margin-bottom: -.7rem;
+      #icon-search {
+        height: 2.4rem;
+      }
+      #icon-clear {
+        height: 1.5rem;
+      }
+    }
+
+    input {
+      border: none;
+      text-align: left;
+      width: 100%;
+      margin: 0 .5rem;
+      font-size: 2.4rem;
+      line-height: 2.4rem;
+      &:focus {
+        outline: none;
+        &::-webkit-input-placeholder { opacity: 0; }
+      }
+    }
+  }
+
   .bar__line {
     border: 1.5px solid $color-black;
     flex-grow: 1;
