working top search

--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -15,35 +15,39 @@
     }
   }
 
-  .search {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    width: 32rem;
-    height: 4.5rem;
+  .searchbox {
     margin-left: 5%;
-    a {
-      cursor: pointer;
-      margin-bottom: -.7rem;
-      #icon-search {
-        height: 2.4rem;
+    .search {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      text-align: center;
+      width: 32rem;
+      height: 4.5rem;
+      .button_svg {
+        border: none;
+        background-color: $color-white;
+        cursor: pointer;
+        margin-bottom: -.3rem;
+        #icon-search {
+          height: 2.4rem;
+        }
+        #icon-clear {
+          height: 1.5rem;
+        }
       }
-      #icon-clear {
-        height: 1.5rem;
-      }
-    }
 
-    input {
-      border: none;
-      text-align: left;
-      width: 100%;
-      margin: 0 .5rem;
-      font-size: 2.4rem;
-      line-height: 2.4rem;
-      &:focus {
-        outline: none;
-        &::-webkit-input-placeholder { opacity: 0; }
+      input {
+        border: none;
+        text-align: left;
+        width: 100%;
+        margin: 0 .5rem;
+        font-size: 2.4rem;
+        line-height: 2.4rem;
+        &:focus {
+          outline: none;
+          &::-webkit-input-placeholder { opacity: 0; }
+        }
       }
     }
   }
