--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -13,6 +13,10 @@
     &:not(:first-child){
       margin-left: 5%;
     }
+
+  }
+  #home_link{
+    text-decoration: underline;
   }
 
   .searchbox {
