--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,8 +1,6 @@
 <div id="recipe-index" class="container">
   <div class="row">
     <div class="col-xs-12 col-md-8 col-md-offset-2">
-      <h1 class="header">Index des recettes</h1>
-      <div class="line"></div>
       <div class="row">
         <div class="col-xs-12 col-sm-10 col-sm-offset-1">
           <ul class="letters">
@@ -43,3 +41,8 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  document.getElementById('recipes_index_link').style.textDecoration = 'underline';
+  document.getElementById('home_link').style.textDecoration = 'none';
+</script>
