--- a/app/assets/stylesheets/recipes/_recipe_index.scss
+++ b/app/assets/stylesheets/recipes/_recipe_index.scss
@@ -1,18 +1,11 @@
 #recipe-index {
-  .header {
-    margin-top: 3rem;
-    font-size: 4.8rem;
-    text-transform: uppercase;
-    font-weight: 600;
-  }
-
-  .line {
-    border-bottom: 3px solid $color-black;
-    margin: 1rem 0 10rem 0;
+  .letters{
+    margin-top: 10rem;
   }
 
   .letter {
     display: flex;
+
     &--left {
       justify-content: flex-start;
       .letter__box {
@@ -57,14 +50,12 @@
       width: 2rem;
       height: 1px;
       border: 1px solid black;
-      margin: 4rem auto;
+      margin: 3rem auto;
     }
   }
 
   @media screen and (max-width: $screen-s) {
-    .header { font-size: 3.4rem; }
-
-    .line { margin: 0.5rem 0 5rem 0; }
+    .letters{ margin-top: 2rem; }
 
     .letter {
       .letter__box { h1 { font-size: 8rem; line-height: 6.5rem; } }
