--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,6 +1,6 @@
 <div class="topbar" id="topbar">
-  <a class="bar__link agent-3" href="/">Acceuil</a>
-  <a class="bar__link agent-3" href="/recipes">Recettes</a>
+  <a id="home_link" class="bar__link agent-3" href="/">Acceuil</a>
+  <a id="recipes_index_link" class="bar__link agent-3" href="/recipes">Recettes</a>
   <% unless request.path == '/' %>
     <form novalidate="novalidate" onsubmit="return searchQuery()" class="searchbox agent-3">
       <div role="search" class="search">
@@ -24,11 +24,16 @@
 
 <script type="text/javascript">
   const reset = document.querySelector('.searchbox [type="reset"]');
+  const input = document.querySelector('input');
+
   if (reset) {
     reset.addEventListener('click', function() {  this.parentNode.querySelector('input').focus();})
   }
-  document.querySelector('input').addEventListener('focus', function() { reset.style.display = 'block'; })
-  document.querySelector('input').addEventListener('blur', function() { reset.style.display = 'none'; })
+
+  if (input) {
+    input.addEventListener('focus', function() { reset.style.display = 'block'; })
+    input.addEventListener('blur', function() { reset.style.display = 'none'; })
+  }
 
   function searchQuery() {
     const query = document.querySelector('.searchbox input').value
