--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -25,6 +25,7 @@
 <script type="text/javascript">
   const reset = document.querySelector('.searchbox [type="reset"]');
   const input = document.querySelector('input');
+  const topbar = document.getElementById('topbar')
 
   if (reset) {
     reset.addEventListener('click', function() {  this.parentNode.querySelector('input').focus();})
