--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,8 @@
   align-items: center;
   background-color: $color-white;
   position: relative;
-  min-height: 65rem;
+  // min-height: 65rem;
+  margin-top: 15rem;
 
   .section-search {
     width: 100%;
