--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         class="search__input"
         placeholder="Recherche"
       >
-      <a v-if='query != ""' v-on:click='clearQuery'><%= svg 'delete' %></a>
+      <a v-if='query && query.length > 0 ' v-on:click='clearQuery'><%= svg 'delete' %></a>
     </div>
     <div class="recipe__box">
       <!-- <div class="sk-folding-cube">
