--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -3,8 +3,8 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  width: 80%;
-  margin: 0 10%;
+  width: 100%;
+  padding: 0 10%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -86,8 +86,7 @@
   }
 
   @media screen and (max-width: $screen-l) {
-    width: 90%;
-    margin: 0 5%;
+    padding: 0 5%;
   }
   .agent-1, .agent-3 {
     opacity: 0;
