fix query bottom and menu

--- a/app/assets/stylesheets/components/_bottombar.scss
+++ b/app/assets/stylesheets/components/_bottombar.scss
@@ -18,7 +18,7 @@
     margin-right: 5px;
   }
 
-  .searchbox {
+  .searchbox_bottom {
     .search {
       display: flex;
       align-items: center;
