--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,12 +1,8 @@
-<div class="hamburger-menu agent-3">
-  <div class="dropdown">
-    <a class="dropdown__button" data-toggle="dropdown"><%= svg 'menu' %></a>
-    <ul class="dropdown-menu dropdown-menu-left menu__dropdown">
-      <li><%= link_to "Editeur", edit_recipe_path(Recipe.first.slug), class: "menu__item menu__link" %></li>
-      <li><%= link_to "Ingrédients", ingredients_path, class: "menu__item menu__link" %></li>
-      <li><%= link_to "Ustensiles", tools_path, class: "menu__item menu__link" %></li>
-      <li><%= link_to "Tags", tags_path, class: "menu__item menu__link" %></li>
-      <li><%= link_to "Se déconnecter", destroy_user_session_path, class: "menu__item menu__link", method: :delete %></li>
-    </ul>
-  </div>
-</div>
+<a class="dropdown__button" data-toggle="dropdown"><%= svg 'menu' %></a>
+<ul class="dropdown-menu dropdown-menu-right menu__dropdown">
+  <li><%= link_to "Editeur", edit_recipe_path(Recipe.first.slug), class: "menu__item menu__link" %></li>
+  <li><%= link_to "Ingrédients", ingredients_path, class: "menu__item menu__link" %></li>
+  <li><%= link_to "Ustensiles", tools_path, class: "menu__item menu__link" %></li>
+  <li><%= link_to "Tags", tags_path, class: "menu__item menu__link" %></li>
+  <li><%= link_to "Se déconnecter", destroy_user_session_path, class: "menu__item menu__link", method: :delete %></li>
+</ul>
