--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -1,5 +1,5 @@
 <div class="bottombar" id="bottombar">
-  <form novalidate="novalidate" onsubmit="return searchQuery()" class="searchbox">
+  <form novalidate="novalidate" onsubmit="return searchQuery()" class="searchbox_bottom">
     <div role="search" class="search">
       <input type="search" name="query" required="required" class="search__input">
       <button type="reset" title="Annuler" class="button_svg button_svg__reset">
@@ -7,11 +7,15 @@
       </button>
     </div>
   </form>
-  
+
   <a id="recipes_index_link" class="bar__link" href="/recipes">Recettes</a>
 
   <% if current_user.present? && current_user.admin? %>
-    <%= render 'shared/menu' %>
+    <div class="hamburger-menu agent-3">
+      <div class="dropup">
+        <%= render 'shared/menu' %>
+      </div>
+    </div>
   <% end %>
 
   <div class="bar__title">
@@ -20,3 +24,23 @@
     </a>
   </div>
 </div>
+
+<script type="text/javascript">
+  const reset_bottom = document.querySelector('.searchbox_bottom [type="reset"]');
+  const input_bottom = document.querySelector('input');
+
+  if (reset_bottom) {
+    reset_bottom.addEventListener('click', function() {  this.parentNode.querySelector('input').focus();})
+  }
+
+  if (input_bottom) {
+    input_bottom.addEventListener('focus', function() { reset_bottom.style.display = 'block'; })
+    input_bottom.addEventListener('blur', function() { reset_bottom.style.display = 'none'; })
+  }
+
+  function searchQuery() {
+    const query = document.querySelector('.searchbox_bottom input').value
+    window.location = `${window.location.origin}/?query=${query}`
+    return false
+  }
+</script>
