--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Oishi. | Cuisine Japonaise</title>
-    <meta name="description" content="Découvrez les meilleurs recettes de cuisines japonnaises"/>
+    <title>Oishi.io - Cuisine. Japonaise. Simple.</title>
+    <meta name="description" content="Découvrez les meilleures recettes de cuisine japonaise<br>
+      Apprenez à cuisiner des recettes simples et délicieuses. Oishi desu!"/>
     <meta property="og:url" content="http://www.oishi.io"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Cuisine. Japonaise. Simple."/>
