fix bottom underline

--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -17,11 +17,11 @@
     &:not(:first-child){
       margin-left: 5%;
     }
+  }
 
-  }
-  #home_link{
-    text-decoration: underline;
-  }
+  // #home_link{
+  //   text-decoration: underline;
+  // }
 
   .searchbox {
     margin-left: 5%;
