--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -2,13 +2,10 @@
   <form novalidate="novalidate" onsubmit="return searchQuery()" class="searchbox_bottom">
     <div role="search" class="search">
       <input type="search" name="query" required="required" class="search__input">
-      <button type="reset" title="Annuler" class="button_svg button_svg__reset">
-        <%= svg 'delete' %>
-      </button>
     </div>
   </form>
 
-  <a id="recipes_index_link" class="bar__link" href="/recipes">Recettes</a>
+  <a id="bottom_recipes_index_link" class="bar__link" href="/recipes">Recettes</a>
 
   <% if current_user.present? && current_user.admin? %>
     <div class="hamburger-menu agent-3">
@@ -26,16 +23,10 @@
 </div>
 
 <script type="text/javascript">
-  const reset_bottom = document.querySelector('.searchbox_bottom [type="reset"]');
   const input_bottom = document.querySelector('input');
 
-  if (reset_bottom) {
-    reset_bottom.addEventListener('click', function() {  this.parentNode.querySelector('input').focus();})
-  }
-
-  if (input_bottom) {
-    input_bottom.addEventListener('focus', function() { reset_bottom.style.display = 'block'; })
-    input_bottom.addEventListener('blur', function() { reset_bottom.style.display = 'none'; })
+  if (location.pathname === '/recipes') {
+    document.getElementById('bottom_recipes_index_link').style.textDecoration = 'underline'
   }
 
   function searchQuery() {
