--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -18,12 +18,8 @@
       margin-left: 5%;
     }
   }
-
-  // #home_link{
-  //   text-decoration: underline;
-  // }
-
-  .searchbox {
+  
+  .searchbox_top {
     margin-left: 5%;
     .search {
       display: flex;
