--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -2,7 +2,7 @@
   <a id="home_link" class="bar__link agent-3" href="/">Accueil</a>
   <a id="recipes_index_link" class="bar__link agent-3" href="/recipes">Recettes</a>
   <% unless request.path == '/' %>
-    <form novalidate="novalidate" onsubmit="return searchQuery()" class="searchbox agent-3">
+    <form novalidate="novalidate" onsubmit="return searchQuery()" class="searchbox_top agent-3">
       <div role="search" class="search">
         <input type="search" name="query" required="required" class="search__input">
         <button type="reset" title="Annuler" class="button_svg button_svg__reset">
@@ -27,8 +27,8 @@
 </div>
 
 <script type="text/javascript">
-  const reset = document.querySelector('.searchbox [type="reset"]');
-  const input = document.querySelector('input');
+  const reset = document.querySelector('.searchbox_top [type="reset"]');
+  const input = document.querySelector('.searchbox_top input');
 
   if (reset) {
     reset.addEventListener('click', function() {  this.parentNode.querySelector('input').focus();})
@@ -46,7 +46,7 @@
   }
 
   function searchQuery() {
-    const query = document.querySelector('.searchbox input').value
+    const query = input.value
     window.location = `${window.location.origin}/?query=${query}`
     return false
   }
