--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Oishi.io - Cuisine. Japonaise. Simple.</title>
+    <title>Oishi.io - Cuisine japonaise. Simple</title>
     <meta name="description" content="Découvrez les meilleures recettes de cuisine japonaise<br>
       Apprenez à cuisiner des recettes simples et délicieuses. Oishi desu!"/>
     <meta property="og:url" content="http://www.oishi.io"/>
