--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,27 @@
 .landing {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: $color-white;
   height: calc(100vh - 150px); /* Fallback for browsers that do not support Custom Properties */
+
+  .headline {
+    margin: 4%;
+    margin-bottom: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    font-family: $headers-font;
+    font-size: 4rem;
+    font-weight: 600;
+    &__main{
+
+    }
+    &__sub {
+      background-color: black;
+      color: white;
+      padding: 0 8px;
+      margin-left: .5rem;
+    }
+  }
 
   .section-search {
     width: 100%;
@@ -125,22 +143,28 @@
 
 @media screen and (max-width: $screen-s) {
   .landing {
-    .title {
-      top: 2rem;
-      right: 2rem;
+    .headline {
+      margin: 4%;
+      margin-bottom: 10rem;
+      justify-content: flex-start;
+      align-items: center;
+      font-size: 4rem;
+      &__main{
+        margin-left: .5rem;
+      }
+      &__sub {
+        margin-left: 0;
+        padding: 0 8px;
+      }
     }
-    .recipe__box--scroll-wrapper {
 
+    .recipe__box--scroll-wrapper {
       .recipe__box__card {
         width: 20rem;
         h2 {
           font-size: 2.4rem;
         }
       }
-    }
-
-    .title--text {
-      font-size: 4rem;
     }
   }
 }
