--- a/app/assets/stylesheets/components/_bottombar.scss
+++ b/app/assets/stylesheets/components/_bottombar.scss
@@ -3,8 +3,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 96%;
-  margin: 0 2%;
+  width: 100%;
+  padding: 0 2%;
   position: fixed;
   z-index: 1;
   bottom: 0;
