--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, shrink-to-fit=no">
     <title>Oishi.io - Cuisine japonaise. Simple</title>
     <meta name="description" content="Découvrez les meilleures recettes de cuisine japonaise<br>
       Apprenez à cuisiner des recettes simples et délicieuses. Oishi desu!"/>
