--- a/app/assets/stylesheets/components/_bottombar.scss
+++ b/app/assets/stylesheets/components/_bottombar.scss
@@ -16,6 +16,7 @@
     font-size: 1.6rem;
     text-transform: uppercase;
     margin-right: 5px;
+    font-weight: 600;
   }
 
   .searchbox_bottom {
