fix landing height

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -80,7 +80,7 @@
         justify-content: center;
         align-items: center;
         p {
-
+          font-size: 2rem;
         }
       }
       &__card {
@@ -163,7 +163,7 @@
       }
     }
     .section-search {
-      margin-top: 7rem;
+      margin-top: 5rem;
       .search {
         width: 28rem;
         input {
