--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -40,9 +40,9 @@
   }
 
   if (location.pathname === '/') {
-    document.getElementById('home_link').style.textDecoration = 'underline'
+    document.getElementById('home_link').classList.add('active')
   } else if (location.pathname === '/recipes') {
-    document.getElementById('recipes_index_link').style.textDecoration = 'underline'
+    document.getElementById('recipes_index_link').classList.add('active')
   }
 
   function searchQuery() {
