--- a/app/assets/stylesheets/recipes/_recipe_index.scss
+++ b/app/assets/stylesheets/recipes/_recipe_index.scss
@@ -34,11 +34,30 @@
 
     .recipes__list {
       .recipe {
+        &:not(:last-child) {
+          margin-bottom: 1rem;
+        }
+
         a {
           font-size: 2.4rem;
           color: $color-black;
-          &:hover {
-            text-decoration: underline;
+
+          &:after {
+            content: '';
+            display: block;
+            height: 2px;
+            background: black;
+            width: 0;
+          }
+
+          &:hover, &:focus { text-decoration: none; }
+
+          &:hover:after,
+          &:focus:after {
+            width: 100%;
+            transform: scaleX(0);
+            transform-origin: right;
+            animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s forwards;
           }
         }
       }
